updated quinzical.sh